# GPUOpenCV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  layout.txt
cmake/: config.cmake
cmake/Hunter/: config.cmake
cmake/Modules/: FindGPUImage.cmake  HunterOpenCV-osx.cmake  MacroAddFramework.cmake  MergeStaticLibraries.cmake  SetOpenCVCMakeArgs-osx.cmake
cmake/projects/GPUImage-ios/: build.sh  hunter.cmake
cmake/projects/OpenCV/: hunter.cmake
cmake/projects/OpenCV-ios/: build.sh
doc/: build.txt
doc/GPUImage/: build.sh
doc/opencv-3.0.0-osx-static/: CMakeCache.txt
exports/: apple
prebuilt/osx/opencv-3.0.0-osx-static/include/opencv2/: opencv_modules.hpp
prebuilt/osx/opencv-3.0.0-osx-static/lib/pkgconfig/: opencv.pc
prebuilt/osx/opencv-3.0.0-osx-static/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
src/: CMakeLists.txt  cmake_install.cmake
src/app/: CMakeLists.txt  cmake_install.cmake
src/app/SimpleVideoFilter/SimpleVideoFilter/: CMakeLists.txt  SimpleVideoFilter-Info.plist  SimpleVideoFilterAppDelegate.mm  SimpleVideoFilterViewController.mm  UIImage+OpenCV.mm
src/app/batch_process/: CMakeLists.txt  batch_process.cpp  batch_process.sh
src/app/face/: CMakeLists.txt  README.txt  dbt_face_detection.cpp  dbt_face_detection.sh  detection_based_tracker.cpp  detection_based_tracker.hpp
src/app/ios/: UIImage+OpenCV.h
src/app/test_cvmatio/: CMakeLists.txt  a.mat  test_cvmatio.cpp
src/app/test_gpuopencv/: CMakeLists.txt  test_gpuopencv.cpp  test_gpuopencv.sh
src/app/test_opencv/: CMakeLists.txt
src/app/test_opencv/sources/: ViewController.mm
src/ios/app/: CMakeLists.txt
src/ios/app/SimpleVideoFilter/: CMakeLists.txt  NativeVideoFrameHandler.h  SimpleVideoFilterViewController.h  SimpleVideoFilterViewController.xib  sugar.cmake
src/ios/app/SimpleVideoFilter/SimpleVideoFilter.xcodeproj/: project.pbxproj
src/lib/: CMakeLists.txt  master.cpp  master.hpp  sugar.cmake
src/lib/complex/: CMakeLists.txt  complex.cpp  complex.hpp  sugar.cmake
src/lib/simple/: CMakeLists  CMakeLists.txt  simple.cpp  simple.hpp  simple_private.cpp  simple_private.hpp  sugar.cmake
src/osx/app/SimpleVideoFilter/: AppDelegate.mm  CMakeLists.txt  CMakeLists.txt.orig  GPUImageRectangleGenerator.h  NativeVideoFrameHandler.h  NativeVideoFrameHandler.mm  SLSSimpleVideoFilterWindowController.mm  UIImage+OpenCV.h  UIImage+OpenCV.mm  interop.h
src/osx/app/SimpleVideoFilter/SimpleVideoFilter/: CMakeLists.txt  GPUImageRectangleGenerator.mm  Info.plist.in  SLSSimpleVideoFilterWindowController.mm  sugar.cmake
src/osx/app/SimpleVideoFilter/SimpleVideoFilter.xcodeproj/: project.pbxproj
src/osx/app/SimpleVideoFilter/SimpleVideoFilter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
